fixed singleslider z-index.

--- a/webapp/src/main/webapp/jquery/jquery.digilib.css
+++ b/webapp/src/main/webapp/jquery/jquery.digilib.css
@@ -295,6 +295,7 @@ div.dl-digilib div.dl-singleslider {
 	padding: 10px;
 	position: absolute;
     top: 0px;	
+    z-index: 100;
     }
 
 div.dl-digilib div.dl-slider {
